--- a/index.html
+++ b/index.html
@@ -7,3 +7,7 @@
         <title>Flashcard</title>
         </head>
         <body>
+            <main>
+                <section id="container">
+                    <article class="cartao">
+                        
